--- a/style/style.css
+++ b/style/style.css
@@ -9,14 +9,46 @@ body{
   color: white;
 }
 
+.main{
+  overflow-y: auto;
+}
+
 .topbar{
   display: flex;
   justify-content: flex-end;
+  width: 100%;
 }
 
 .button{
   background-color: #4a4a4a;
   border-radius: .4rem;
-  padding: 0 .5rem;
-  margin: .5rem;
+  padding: .1rem .5rem;
+  margin: .5rem .2rem;
+  font-size: .7rem;
+}
+
+.container{
+  width: 91%;
+  margin: 3rem auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.user{
+  position: relative;
+  margin: .5rem .2rem;
+}
+
+.user img{
+  display: block;
+}
+
+.user-name{
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: .7rem;
+  padding: .1rem .3rem;
+  background-color: rgba(0, 0, 0, 0.4);
 }
